# nameko_logs_id

./: Makefile  README.md  pyproject.toml
nameko_logs_id/: get_stack_id.py  service1.py  service2.py
nameko_logs_id/utils/: utils.py
